Fix 검색 기능 수정